--- a/documentation.html
+++ b/documentation.html
@@ -584,7 +584,7 @@
                                                                     "ng-isolate-scope">
                                                                     <p>User
                                                                     already
-                                                                    exist</p>
+                                                                    exists</p>
                                                                     </td>
 
                                                                     <td class=
@@ -1485,10 +1485,7 @@
 
                                                                     <td class=
                                                                     "ng-isolate-scope">
-                                                                    <p>
-                                                                    Invitation
-                                                                    already
-                                                                    sent</p>
+                                                                    <p>Friendship already exists</p>
                                                                     </td>
 
                                                                     <td class=
