--- a/documentation.html
+++ b/documentation.html
@@ -1808,7 +1808,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
@@ -7808,7 +7808,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
@@ -12200,7 +12200,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
@@ -13675,7 +13675,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
@@ -15252,7 +15252,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
@@ -16825,7 +16825,7 @@
                                     </header>
 
                                     <ul class="operations">
-                                        <li class="delete operation">
+                                        <li class="post operation">
                                             <header>
                                                 <a class=
                                                 "focus-editor ng-scope"></a>
